# backend/models/task.py
@@ -1,0 +1,9 @@
+from attrs import define
+
+
+@define
+class Task:
+    task_id: str
+    name: str
+    description: str
+    points: int = 1
